dnl Process this file with autoconf to produce a configure script.
AC_INIT(cppunit/Test.h)

AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(cppunit-x, 0.2)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_EXEEXT
AC_LANG_CPLUSPLUS

if test "x$GXX" = xyes; then
  CXXFLAGS="$CXXFLAGS -Wall"
fi
AC_SUBST(CXXFLAGS)

CONFIGURE_DATE=`date +%Y%m%d`
AC_SUBST(CONFIGURE_DATE)

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT( \
  Makefile \
  cppunit/Makefile \
  cppunit/tests/Makefile \
  samples/Makefile \
  misc/Makefile \
  msvc/Makefile \
  VxWorks/Makefile \
  doc/Makefile)
